Fixed the pixel image so it covers the image completely. Added SASS to the .gitignore.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -48,12 +48,14 @@ a {
   a:focus {
     outline: none; }
 
-i {
+i, img, canvas {
   width: auto; }
 
-img, canvas {
-  width: auto;
+canvas {
   max-width: 100%; }
+
+img {
+  max-width: calc(100% - 1px); }
 
 .hide {
   display: none; }
