--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -56,13 +56,16 @@ a {
   }
 }
 
-i {
+i, img, canvas {
   width: auto;
 }
 
-img, canvas {
-  width: auto;
+canvas {
   max-width: 100%;
+}
+
+img {
+  max-width: calc(100% - 1px);
 }
 
 .hide {
